--- a/assets/styles.css
+++ b/assets/styles.css
@@ -391,8 +391,7 @@ h1, h2, h3 {
 
 .card h3 {
   font-size: 1.3rem;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
   margin-bottom: 16px;
 }
 
@@ -401,10 +400,9 @@ h1, h2, h3 {
   font-size: 1rem;
   opacity: 0.9;
   line-height: 1.7;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 20px;
   flex-grow: 1;
+  text-align: center;
 }
 
 /* Content Sections */
@@ -448,7 +446,7 @@ h1, h2, h3 {
 }
 
 .content-section .highlight-box {
-  background-color: rgba(108, 99, 255, 0.1);
+  background-color: rgb(0 51 153 / 2%);
   border-left: 4px solid var(--primary);
   padding: 20px;
   margin: 30px 0;
@@ -744,6 +742,7 @@ footer {
     padding: 80px 30px 30px;
     transition: right 0.4s ease;
     background: rgba(255, 255, 255, 0.98);
+    border: 1px solid var(--primary);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
     border-top-right-radius: 30px;
@@ -836,7 +835,7 @@ footer {
   
   .navbar {
     width: calc(100% - 20px);
-    padding: 0 15px;
+    padding: 0 20px;
   }
   
   .hero {
