--- a/assets/styles.css
+++ b/assets/styles.css
@@ -160,7 +160,7 @@ h1, h2, h3 {
     }
     
     .navbar.scrolled .logo-img {
-        height: px;
+        height: 16px;
     }
     
     .logo-text {
